--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
 .App {
   text-align: center;
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  height: 12vmax;
+    pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+    display: flex;
+    padding-top: 4vh;
+    padding-bottom: 4vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2vmax;
   color: white;
+}
+
+.line_parent {
+    display: flex;
+    margin-top: 2vh;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 22vh;
+    color:white;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line_first {
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    left: 0;
+    top: 12vh;
+    background-color: #FFA7E1;
+}
+
+.line_second {
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    left: 0;
+    bottom: 6vh;
+    background-color: #FFA7E1;;
+}
+
+
+.line_parent {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.scrolling_text {
+    font-weight: bold;
+    white-space: nowrap;
 }
