--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,16 @@
   color: #61dafb;
 }
 
+a {
+    color: #FFA7E1;
+    text-decoration: none;
+}
+.notice {
+    font-size: 12pt;
+    color: gray;
+    margin-top: 2vh;
+}
+
 .line_first {
     width: 100%;
     height: 1px;
